refactor: restructure website application and remove unused files

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -22,6 +22,6 @@
   },
   "include": ["src"],
   "references": [
-    { "path": "../game-client" }
+    { "path": "../../packages/game-client" }
   ]
 }
